# django-template

./: .copier-answers.yml  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  README.md  compose.yaml  copier.yml  dprint.json  entrypoint.sh  lefthook.yml  manage.py  package-lock.json  package.json  pyproject.toml  renovate.json
.devcontainer/: .env  Dockerfile  compose.yaml  devcontainer.json  post-create.sh
.github/workflows/: build-docker.yml  renovate.yml  test.yml
config/: settings.py  urls.py
dev/: .env  compose.yaml
nginx/: default-headers.conf  nginx.conf
shared/: admin.py  apps.py  models.py  utils.py
users/: admin.py  apps.py  models.py
users/migrations/: 0001_initial.py
