[project]
name = "django-template"
version = "0.1.0"
description = "Django Template"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "django~=6.0.5",
  "django-crontask>=1.2.0",
  "django-environ>=0.13.0",
  "django-extensions>=4.1",
  "django-imagekit>=6.1.0",
  "django-import-export[all]>=4.4.1",
  "django-private-storage>=3.1.3",
  "django-simple-history>=3.11.0",
  "django-tasks-db>=0.12.0",
  "granian>=2.7.4",
  "pillow>=12.2.0",
  "psycopg[binary,pool]>=3.3.4",
  "python-slugify>=8.0.4",
  "redis>=7.4.0",
]

[dependency-groups]
dev = [
  "copier>=9.15.0",
  "django-debug-toolbar>=6.3.0",
  "djangofmt>=0.2.8",
  "dprint-py>=0.53.1.0",
  "lefthook>=2.1.6",
  "pyright>=1.1.408",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pytest-django>=4.12.0",
  "ruff>=0.15.2",
  "werkzeug>=3.1.8",
]
github-workflows = [
  "pytest-github-actions-annotate-failures>=0.4.0",
]

[tool.ruff]
target-version = "py313"
line-length = 160
exclude = [".venv", "*/migrations/*"]
force-exclude = true

[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "D", # pydocstyle
  "TD", # flake8-todos
  "FIX", # flake8-fixme
  "COM812", # missing-trailing-comma
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
  "ANN", # flake8-annotations
  "PLC0415", # `import` should be at the top-level of a file
  "ARG", # flake8-unused-arguments
  "SLF001", # Private member accessed
]

[tool.ruff.lint.pycodestyle]
max-line-length = 160

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = [
  "INP001", # implicit-namespace-package
  "S101", # assert
]

[tool.pytest.ini_options]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["."]

[tool.coverage.run]
omit = [
  "*/tests/*",
]

[tool.pyright]
typeCheckingMode = "standard"
reportIncompatibleVariableOverride = false
